test/cases/negative/existing9.jsx
const a = 1, ref = 2
const b = 1, c = 2,
  reactive = 1
